--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,7 +3,7 @@
     padding: 18rem 18rem 5rem 18rem;
 }
 
-.Home .panel{
+.panel{
     background-color: white;
     margin: 1.5rem;
     border-radius: 20px;
