--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -9,3 +9,26 @@
     border-radius: 20px;
 }
 
+.panel > p{
+    margin-top: 12px;
+    margin-left: 22px;
+    margin-right: 22px;
+    margin-bottom: 12px;
+    color: rgba(0,0,0,0.54);
+    font-size: 21px;
+    text-align: justify;
+}
+
+.ConteinerGraph{
+    margin-top: 3rem;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.ConteinerGraph .Graph{
+    display: block;
+    width: 45%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
