--- a/src/components/HomeInput/HomeInput.css
+++ b/src/components/HomeInput/HomeInput.css
@@ -1,16 +1,18 @@
-.inputs{
+.inputs > h1{
     text-align: center;
     display: block;
     margin-left: auto;
     margin-right: auto;
     color: white;
-    font-size: 2rem;
+    font-size: 4rem;
 }
 
 .inputs > input{
+    margin-left: auto;
+    margin-right: auto;
     text-indent: 10px;
     margin-top: 10px;
-    width: 420px;
+    width: 40%;
     height: 40px;
     border: 0;
     border-radius: 10px;
