--- a/src/components/HomeInput/HomeInput.css
+++ b/src/components/HomeInput/HomeInput.css
@@ -1,22 +1,24 @@
+
 .inputs > h1{
+    color: #fff;
     text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    color: white;
     font-size: 4rem;
 }
 
 .inputs > input{
+    display: block;
+    text-indent: 10px;
     margin-left: auto;
     margin-right: auto;
-    text-indent: 10px;
-    margin-top: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     width: 40%;
     height: 40px;
     border: 0;
+    color: #fff;
     border-radius: 10px;
     border-color: #6099f6;
+    background-color: #6099f6;
     outline: none;
     background-repeat: no-repeat;
     background-size: 30px;
